<resources>
    <string name="app_name">LastMinuteFlix</string>
    <string name="sign_in_text">Sign In</string>
    <string name="username_hint">Username</string>
    <string name="new_username_hint">Enter username</string>
    <string name="password_hint">Password</string>
    <string name="new_password_hint">Enter password</string>
    <string name="password_again_hint">Re-enter password</string>
    <string name="log_in_button_text">Log In</string>
    <string name="welcome_text">Welcome</string>
    <string name="browse_movies_button_text">Browse Showtimes</string>
    <string name="shopping_cart_button_text">Shopping Cart</string>
    <string name="order_history_button_text">Order History</string>
    <string name="sign_up_button_text">Sign Up</string>
    <string name="create_new_account_button_text">Create Account</string>
    <string name="admin_button_text">Admin</string>
    <string name="log_out_button_text">LOG OUT</string>
    <string name="log_out_dialog_message">Log out?</string>
    <string name="log_out_dialog_positive_button">YES</string>
    <string name="log_out_dialog_negative_button">NO</string>
    <string name="display_create_a_new_account">Create a New Account</string>
    <string name="display_admin">Admin</string>
    <string name="button_delete_user">Delete User</string>
    <string name="button_add_movie_genre">Add Movie Genre</string>
    <string name="button_add_movie">Add Movie</string>
    <string name="button_delete_movie">Delete Movie</string>
    <string name="button_add_showtime">Add Showtime</string>
    <string name="fragment_list_item_theater_name">Theater Name</string>
    <string name="fragment_list_item_movie_title">Movie Title</string>
    <string name="fragment_list_item_showtime">Showtime</string>
    <string name="fragment_list_item_ticket_price">Ticket Price</string>
    <string name="fragment_list_item_button_buy">Buy</string>
    <string name="fragment_list_item_button_cancel">Cancel</string>
    <string name="fragment_browse_showtime_list_theater_name">Theater Name</string>
    <string name="fragment_list_item_button_delete">Delete</string>
    <string name="display_add_a_movie">Add a Movie</string>
    <string name="hint_add_movie_title">Title</string>
    <string name="prompt_select_genre">Select Genre</string>
    <string name="hint_add_movie_duration">Duration (in minutes)</string>
    <string name="hint_add_movie_rating">Rating</string>
    <string name="display_add_movie_genre">Add a Movie Genre</string>
    <string name="hint_enter_genre">Enter genre</string>
    <string name="display_add_showtime">Add a Movie Showtime</string>
    <string name="hint_theater_name">Theater name</string>
    <string name="hint_city_state">City, State</string>
    <string name="hint_showtime">Showtime (e.g. 7:30 PM)</string>
    <string name="hint_ticket_price">Ticket price (no dollar sign)</string>
    <string name="hint_num_seats">Number of seats</string>
    <string name="display_browse_showtime">Browse Movie Showtimes</string>
    <string name="display_order_history_textview">Order History</string>
</resources>