<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/backgroundColor"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/display_add_showtime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/display_add_showtime"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/display_add_showtime"
        tools:ignore="MissingConstraints">

        <Spinner
            android:id="@+id/theater_movie_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp" />

        <EditText
            android:id="@+id/edittext_theater_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:hint="@string/hint_theater_name"
            android:importantForAutofill="no"
            android:textSize="16sp"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/edittext_theater_city_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:hint="@string/hint_city_state"
            android:importantForAutofill="no"
            android:textSize="16sp"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/edittext_showtime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:hint="@string/hint_showtime"
            android:importantForAutofill="no"
            android:textSize="16sp"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/edittext_ticket_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:hint="@string/hint_ticket_price"
            android:importantForAutofill="no"
            android:textSize="16sp"
            android:inputType="text|numberDecimal" />

        <EditText
            android:id="@+id/edittext_num_seats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:hint="@string/hint_num_seats"
            android:importantForAutofill="no"
            android:textSize="16sp"
            android:inputType="text|number" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>