<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="8dp" >

            <TextView
                android:id="@+id/fragment_browse_showtime_list_theater_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fragment_list_item_theater_name" />

            <TextView
                android:id="@+id/fragment_browse_showtime_list_movie_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fragment_list_item_movie_title" />

            <TextView
                android:id="@+id/fragment_browse_showtime_list_showtime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fragment_list_item_showtime" />

            <TextView
                android:id="@+id/fragment_browse_showtime_list_ticket_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fragment_list_item_ticket_price" />
        </LinearLayout>

        <Button
            android:id="@+id/fragment_browse_showtime_list_add_to_cart_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/fragment_list_item_button_add"
            android:textSize="14sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
